# modern-opalx-regsuite

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
demo-data/: branches.json
deploy/: example-config.toml  migrate-rt-logs.sh  nginx.conf  opalx-keys.README.md  opalx-keys.sh  opalx-regsuite.service  setup.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: apiKeys.ts  (+12 more)
modern_opalx_regsuite/: __init__.py  _atomic_write.py  archive_service.py  artifacts.py  catalog.py  cli.py  config.py  config_types.py  data_model.py  flakiness.py  remote.py  runner.py  sitegen.py  user_store.py
modern_opalx_regsuite/api/: __init__.py  api_keys.py  app.py  archive.py  auth.py  branches.py  catalog.py  connections.py  coordinator.py  deps.py  integrity.py  keys.py  public.py  results.py  runs.py  runs_core.py  schedules.py  state.py  stats.py  stats_developer.py  stream.py  tokens.py
modern_opalx_regsuite/api_keys/: __init__.py  index.py  models.py  service.py  store.py
modern_opalx_regsuite/beamline_viz/: __init__.py  elements.py  mesh_extractor.py  parser.py  renderer.py
modern_opalx_regsuite/runner/: __init__.py  cmake.py  execution.py  git.py  migrations.py  pipeline.py  pipeline_git.py  pipeline_indexes.py  pipeline_options.py  plotting.py  regression_results.py  regression_runner.py  remote_setup.py
scripts/: generate_demo_data.py
tests/: test_archive_service.py  test_artifacts.py  test_catalog.py  test_cmake_overrides.py  test_flakiness.py  test_generated_regression_commands.py  test_pipeline_remote_slurm_steps.py  test_regression_stat_parsing.py  test_remote_slurm_wrapping.py  test_rerun_metadata.py  test_runs_core.py  test_schedule_options.py  test_slurm_config.py
(+189 files in other folders)
